--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap-vue": "^0.16.1",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
